refactor(api): Simplify RoadmapController createRoadmap method